--- a/views/victory_screen.erb
+++ b/views/victory_screen.erb
@@ -1,4 +1,4 @@
-<%=p1_name%> YOU HAVE FAILED THIS CITY!
-<%=p2_name%> CONGRATULATIONS!
-word was <%=word%>
+<body background="http://25.media.tumblr.com/6acf368224ec6f0719114415108396d8/tumblr_my46uzGvh01t8km4co2_400.gif">
+<center><h1 style=color:blue><%=p2_name%> YOU WIN WANNA GOLD STAR? well then shut up u still suck word was <%=word%>
+<center><img src="https://s-media-cache-ak0.pinimg.com/237x/5c/7f/57/5c7f5785cae7ac5be1efd46d89d435c2.jpg"> 
 <a href="/">play again</a>
